assets/scss/app.scss
/* ... */
.cfeo-page {
    #pageimage {
        z-index: 0;
        width: 100%;
        float: left;
        clear: both;
    }
}

.osd-iip {
    display: block;
    width: 100%;
    height: 100%;
}

.compare-block {
    #image_one,
    #image_two {
        width: 100% !important;
    }
}

.sticky-widget {
    position: relative;
    top: 0;
}

.instr {
    button,
    .button {
        padding: .5rem 2rem .5rem .5rem;

        &:after {
            top: 37.5%;
            padding-right: 0;
            border: none !important;
            content: "\f0d7";
            font-family: "FontAwesome";
        }
    }
}

/* comments */
.comment.panel {
    max-width: 600px;
    margin: 15px;
    clear: both;
}

.spinner {
    left: 0 !important;
}

.inline-list span.annotations {
    margin-bottom: 0;
    color: #fff;
}

#large-image #annotations {
    text-align: left;
}

/* General styles and AC-specific styles */
.main.content-section {
    margin-top: rem-calc(20px);
    a.exit-off-canvas {
        box-shadow: none !important;
    }
    .pdf-pagination {
        margin-right: 5px;
        float: none !important;
    }
    canvas {
        border: 1px dotted $borderColor;
        margin: 0 0 rem-calc(15px) 0 !important;
    }
    svg {
        border: 1px dotted $borderColor;
        margin: 0 0 rem-calc(15px) 0 !important;
    }
}

.impressions.search-results {
    li {
        border-bottom: 1px solid $borderColor;
        padding-bottom: .5rem;
    }
    h4 {
        margin-bottom: 0;
    }
    p {
        font-size: rem-calc(14px); 
        max-width: rem-calc(600px);
        margin-bottom: 0;
    }
    li a.label {
        top: -3px;
        margin-bottom: 0 !important;
    }
}

.search-button {
    padding: .5rem 1rem;
    margin-bottom: 0;
}

/* Links to digital images */
.more-information {
    p {
        display: inline-block;
        margin-bottom: 0;
        font-size: rem-calc(14px);
    }
    ul.image-links {
        margin-top: 0;
        li {
            list-style-type: square;
            font-size: rem-calc(14px);
            margin-bottom: rem-calc(15px);
        }
    }

    .ocve {
        color: $primary-color-ocve;
    }

    .cfeo {
        color: $primary-color-cfeo;
    }
}

.context-panel {
    -webkit-box-shadow: -5px 5px 5px 0px rgba(0, 0, 0, .75);
    -moz-box-shadow: -5px 5px 5px 0px rgba(0, 0, 0, .75);
    box-shadow: -5px 5px 5px 0px rgba(0, 0, 0, .5);
    
    width: 400px; 
    position: absolute;
    top: 55px;
    right: -407px;
    z-index: 100000;
    background-color: #fff;
    border: 1px solid #ccc;
    border-right: 0;
    
    /* animations */
    transition-duration: .25s;
    -webkit-transition-duration: .25s;
    transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(-100%, 0, 0); 
    
    .loading {
        display: none;
        text-align: center;
    }
    
    div.close {
        float: right;
        margin-top: 15px;
        margin-right: 15px;
    }
    
    .panel-content {
        padding: 15px;
        overflow: auto;
    }
    
    * {
        font-size: 12px;
    }

    h2 {
        font-weight: 700; 
        margin-top: 15px;
        font-size: 14px;
    }
    
    .user-icon {
        clear: both;
        float: left;
        width: 24px;
    }

    .annotation-box {
        float: left;
        width: 80%;
    }
    
    .annotation {
        padding: 4px;
        border: 1px solid #ccc;
    }

    .actions {
        margin-top: 4px;
        .reply {
            font-weight: 700;
            margin-bottom: 4px;
            display: block;
        }
        .inline-list {
            float: right;
        }
    }

    .reply-box {
        padding-top: 12px;
        border-top: 1px solid $workspaceNavColor;
        position: relative;
        display: none; 
        margin-top: 12px;
        p {
            margin-bottom: 0;
            margin-left: 20px;
        }
        .states {
            margin-left: 20px;
        }
    }
    span.saving {
        display: none;
        background-color: #fff;
        opacity: 0.8;
        position: absolute;
        right: 0;
        top: 0;
        bottom: 0;
        left: 0;
        z-index: 20000;
    }
    
    .reply-button,
    .bin-it {
        width: 40%;
        float: left;
    }
    
    .bin-it {
        a {
            float: right;
            padding-top: 10px;
        }
    }
    
    a.ctrl.edit {
        padding-top: 10px;
    }
    
    li.cancel {
        float: right;
    }
    
    .states {
        clear: both;
        margin: 4px 0;
        input {
            display: inline;
            margin-top: 4px;
        }
    }
    a.ctrl.trash {
        margin-top: 10px;
        display: block;
        float: right;
    }
    
    textarea[data-reply-text] {
        margin-left: 20px;
    }
    
    .saved-reply {
        display: none;
        clear: both;
        textarea {
            clear: both;
            padding-top: 12px;
        }
        .disabled {
            background-color: #e7e7e7;
        }
        .inline-list {
            margin-bottom: 0;
        
        }
        .edit-actions {
            display: none;
            margin-left: 20px;
            li {
                margin-left: 0;
            }
        }
    }
}

.context-panel.slide-out {
    right: 0;
    transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(0, 0, 0);
}

.zoom-preview {
    position: absolute;
    color: darken($secondary-color, 40%);
    padding: .25rem .5rem;
    border: 1px solid $secondary-color;
    bottom: 26px;
    right: 3px;
    background: white;
}

.flag {
    .zoom-preview {
        bottom: -8px !important;
    }

    .it-has-annotations {
        bottom: -1px !important;
    }
}

.it-has-annotations {
    position: absolute;
    bottom: 0;
    left: 13px;
    bottom: 33px;
}
/* ... */

